third_party/rust_crates/forks/pin-init/tests/ui/compile-fail/init/missing_error_type.rs
use pin_init::*;

struct Foo {
    x: Box<usize>,
}

fn main() {
    let _ = init!(Foo { x: Box::new(0)? }?);
}
